@@ -156,10 +156,21 @@ grub_arg_show_help (grub_command_t cmd)
 		}
 	    }
 
-	  while (spacing-- > 0)
-	    grub_putchar (' ');
+	  const char *doc = opt->doc;
+	  for (;;)
+	    {
+	      while (spacing-- > 0)
+		grub_putchar (' ');
 
-	  grub_printf ("%s\n", opt->doc);
+	      while (*doc && *doc != '\n')
+		grub_putchar (*doc++);
+	      grub_putchar ('\n');
+
+	      if (! *doc)
+		break;
+	      doc++;
+	      spacing = 4 + 20;
+	    }
 
 	  switch (opt->shortarg)
 	    {
