@@ -1,3 +1,8 @@
+2009-01-30  Christian Franke  <franke@computer.org>
+
+	* normal/arg.c (grub_arg_show_help): Add indentation if '\n' appears
+	in option help text.
+
 2009-01-27  Pavel Roskin  <proski@gnu.org>
 
 	* disk/fs_uuid.c (search_fs_uuid): Ignore case of the UUID.
